[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Logo.png" type="Texture" id=1]
[ext_resource path="res://Main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/Menu.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Fade.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/NewGameMenu.gd" type="Script" id=5]
[ext_resource path="res://Fonts/Font3.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sprites/RadialLight.png" type="Texture" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="Animation" id=33]
resource_name = "StartGameIn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StartGame/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StartGame/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=32]
resource_name = "StartGameOut"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("StartGame/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StartGame/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[sub_resource type="Animation" id=34]
resource_name = "HowToPlayIn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HowToPlay/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HowToPlay/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=35]
resource_name = "HowToPlayOut"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HowToPlay/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HowToPlay/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[sub_resource type="Animation" id=30]
resource_name = "BackIn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Back/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=31]
resource_name = "BackOut"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Back/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[node name="NewGameMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -300.0
margin_right = 350.0
margin_bottom = 300.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -350.0
margin_right = 350.0
margin_bottom = 350.0
rect_min_size = Vector2( 700, 700 )
texture = ExtResource( 3 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="TextureRect"]
position = Vector2( 250, 160 )
scale = Vector2( 1.8, 0.8 )
texture = ExtResource( 7 )
color = Color( 0.784314, 0.784314, 1, 1 )
energy = 3.0

[node name="Light2D2" type="Light2D" parent="TextureRect"]
position = Vector2( 545, 160 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 7 )
color = Color( 1, 0, 0, 1 )
energy = 5.0

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -250.0
margin_right = 300.0
margin_bottom = 250.0
mouse_filter = 2
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
material = SubResource( 1 )
margin_right = 600.0
margin_bottom = 130.0
rect_min_size = Vector2( 600, 130 )
texture = ExtResource( 1 )
stretch_mode = 1

[node name="SelectBox" type="VBoxContainer" parent="Menu"]
margin_top = 150.0
margin_right = 600.0
margin_bottom = 250.0
rect_min_size = Vector2( 300, 50 )
custom_constants/separation = 20

[node name="Level" type="HBoxContainer" parent="Menu/SelectBox"]
margin_right = 600.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 20 )
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Menu/SelectBox/Level"]
margin_left = 15.0
margin_right = 265.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 40 )
text = "LEVEL_SELECT"
align = 1
valign = 1

[node name="OptionButton" type="OptionButton" parent="Menu/SelectBox/Level"]
margin_left = 285.0
margin_right = 585.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 40 )

[node name="Difficulty" type="HBoxContainer" parent="Menu/SelectBox"]
margin_top = 60.0
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 20 )
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Menu/SelectBox/Difficulty"]
margin_left = 15.0
margin_right = 265.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 40 )
text = "DIFFICULTY_SELECT"
align = 1
valign = 1

[node name="OptionButton" type="OptionButton" parent="Menu/SelectBox/Difficulty"]
margin_left = 285.0
margin_right = 585.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 40 )

[node name="Buttons" type="VBoxContainer" parent="Menu"]
margin_top = 270.0
margin_right = 600.0
margin_bottom = 510.0
mouse_filter = 2
custom_constants/separation = 0

[node name="StartGame" type="Button" parent="Menu/Buttons"]
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
shortcut_in_tooltip = false
flat = true

[node name="Label" type="Label" parent="Menu/Buttons/StartGame"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
custom_constants/shadow_as_outline = 10
text = "START_GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Menu/Buttons/StartGame"]
position = Vector2( 300, 40 )
scale = Vector2( 2, 0.3 )
texture = ExtResource( 7 )
energy = 0.0

[node name="HowToPlay" type="Button" parent="Menu/Buttons"]
margin_top = 80.0
margin_right = 600.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 80 )
shortcut_in_tooltip = false
flat = true

[node name="Label" type="Label" parent="Menu/Buttons/HowToPlay"]
material = SubResource( 3 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 10
text = "HOW_TO_PLAY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Menu/Buttons/HowToPlay"]
position = Vector2( 300, 40 )
scale = Vector2( 2, 0.3 )
texture = ExtResource( 7 )
energy = 0.0

[node name="Back" type="Button" parent="Menu/Buttons"]
margin_top = 160.0
margin_right = 600.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 80 )
shortcut_in_tooltip = false
flat = true

[node name="Label" type="Label" parent="Menu/Buttons/Back"]
material = SubResource( 3 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 10
text = "BACK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="Menu/Buttons/Back"]
position = Vector2( 300, 40 )
scale = Vector2( 2, 0.3 )
texture = ExtResource( 7 )
energy = 0.0

[node name="StartGameA" type="AnimationPlayer" parent="Menu/Buttons"]
anims/StartGameIn = SubResource( 33 )
anims/StartGameOut = SubResource( 32 )

[node name="HowToPlayA" type="AnimationPlayer" parent="Menu/Buttons"]
anims/HowToPlayIn = SubResource( 34 )
anims/HowToPlayOut = SubResource( 35 )

[node name="BackA" type="AnimationPlayer" parent="Menu/Buttons"]
anims/BackIn = SubResource( 30 )
anims/BackOut = SubResource( 31 )

[node name="Fade" parent="." instance=ExtResource( 4 )]
mouse_filter = 2
[connection signal="mouse_entered" from="Menu/Buttons/StartGame" to="." method="_on_StartGame_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/StartGame" to="." method="_on_StartGame_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="mouse_entered" from="Menu/Buttons/HowToPlay" to="." method="_on_HowToPlay_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/HowToPlay" to="." method="_on_HowToPlay_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="mouse_entered" from="Menu/Buttons/Back" to="." method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/Back" to="." method="_on_Back_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/Back" to="." method="_on_Back_pressed"]
